- `quickfort`: reject tiles for building that contain magma or deep water
- `armoks-blessing`: fix error when making class "Normal" attributes legendary
- `emigration`: remove units from burrows when they emigrate
- `agitation-rebalance`: fix calculated percent chance of cavern invasion

## Misc Improvements
- `gui/reveal`: show aquifers even when not in mining mode
- `gui/control-panel`: add alternate "nodump" version for `cleanowned` that does not cause citizens to toss their old clothes in the dump. this is useful for players who would rather sell old clothes than incinerate them
- `agitation-rebalance`: when more than the maximum allowed cavern invaders are trying to enter the map, prefer keeping the animal people invaders instead of their war animals

## Removed
- `drain-aquifer`: replaced by ``aquifer drain --all``; an alias now exists so ``drain-aquifer`` will automatically run the new command

# 50.12-r2.1

## Fixes
- `fix/noexert-exhaustion`: fix typo in control panel registry entry which prevented the fix from being run when enabled
- `gui/suspendmanager`: fix script startup errors
- `control-panel`: properly auto-enable newly added bugfixes

## Misc Improvements
- `gui/unit-syndromes`: make syndromes searchable by their display names (e.g.  "necromancer")

# 50.12-r2

## New Tools
- `agitation-rebalance`: alter mechanics of irriation-related attacks so they are less constant and are more responsive to recent player bahavior
- `fix/ownership`: fix instances of multiple citizens claiming the same items, resulting in "Store owned item" job loops
- `fix/stuck-worship`: fix prayer so units don't get stuck in uninterruptible "Worship!" states
- `instruments`: provides information on how to craft the instruments used by the player civilization
- `modtools/item-trigger`: (reinstated) modder's resource for triggering scripted content when specific items are used